[package]
name = "kvm-host"
version = "0.1.0"
edition = "2021"

[dependencies]
kvm-common = { path = "../kvm-common" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
evdev = "0.12"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.27", features = ["poll", "fs"] }
signal-hook = "0.3"
